Finalizado Blog Musical
Ingresé contenido y cuadré detalles estéticos.

--- a/BlogMusica/index.html
+++ b/BlogMusica/index.html
@@ -40,12 +40,66 @@
       <div class="col-sm-9">
         <div class="row nomargingright">
           <div class="jumbotron contenido">
-
+            <div class="row nomargingright">
+              <div class="col-lg-8 col-md-6 col-sm-6 nomargingright">
+                <h2>Juanes hizo historia al cantar en español en "The Late Show" de Stephen Colbert</h2>
+                <p class="lead post">
+                  Juanes se presentó el lunes pasado en el programa estadounidense "The Late Show with Stephen Colbert", en donde interpretó "Es tarde", canción incluida en el disco "Mis planes son amarte".<br>
+                  Según reseña la revista Billboard, Juanes hizo historia en "The Late Show with Stephen Colbert" al cantar en español por primera vez en toda la historia del programa de televisión.<br>
+                  Con "Mis planes son amarte", Juanes ganó recientemente dos premios Grammy Latino, y está nominado al Grammy (anglo) en la categoría mejor álbum pop latino.<br>
+                  Recientemente el artista anunció "Amarte tour", gira que realizará en Norteamérica en 2018 junto a la cantante Mon Laferte.<br>
+                  Por estos días Juanes también se dedica a promocionar su participación en el filme animado "Ferdinand", que en Colombia se estrena el próximo 21 de diciembre. Además de prestar su voz al  personaje Juan, el artista interpreta "Lay your head on me", Un tema perfecto para esta historia sobre un enorme toro con un gran corazón.
+                </p>
+              </div>
+              <div class="col-lg-4 col-md-6 col-sm-6 nomargingright">
+                <div class="container nomargingright nopadding">
+                  <img src="img/juanes.jpg" alt="Juanes" class="img-rounded img-post">
+                </div>
+              </div>
+            </div>
+            <div class="row nopadding">
+              <div class="col-xs-12 post-input nopadding">
+                <form class="form" role="form">
+                  <div class="input-group">
+                    <span class="input-group-addon">
+                      <i class="glyphicon glyphicon-user"></i>
+                    </span>
+                    <textarea name="comentario" class="form-control text-input" placeholder="Comentario..." rows="2" cols="150"></textarea>
+                  </div>
+                </form>
+              </div>
+            </div>
           </div>
         </div>
         <div class="row nomargingright">
           <div class="jumbotron contenido">
-
+            <div class="row nomargingright">
+              <div class="col-lg-4 col-md-6 col-sm-6 nomargingright">
+                <div class="container nomargingright nopadding">
+                  <img src="img/shakira.jpg" alt="Shakira" class="img-rounded img-post">
+                </div>
+              </div>
+              <div class="col-lg-8 col-md-6 col-sm-6 nomargingright">
+                <h2>Shakira se pondrá en manos del “doctor voz”</h2>
+                <p class="lead post">
+                  Considerado como el mejor cirujano laringólogo del mundo, Steven M. Zeitels será el encargado de operar a Shakira. El médico, quien cumplió 60 años el pasado 7 de noviembre, mientras estaba en Chile dando una conferencia como invitado de la Sociedad Chilena de Otorrinolaringología en 2001, conoció a María Nuria Hananias, cirujana otorrinolaringóloga chilena; se casaron en el 2003 y tuvieron dos hijos, un niño y una niña. Es famoso por los maravillosos resultados obtenidos con diferentes artistas del mundo de la música.<br>
+                  Además, confirmó recientemente que la lesión que sufre Shakira suele ser común entre las personas que se dedican al canto profesional por el uso específico y constante que deben hacer de la voz. “El sangrado en alguna de las cuerdas vocales ocurre cuando hay vasos sanguíneos malformados.<br>
+                  Estos tienen várices que se rompen y no se regeneran apropiadamente”, explicó el médico en una entrevista para la BBC.
+                </p>
+              </div>
+            </div>
+            <div class="row nopadding">
+              <div class="col-xs-12 post-input nopadding">
+                <form class="form" role="form">
+                  <div class="input-group">
+                    <span class="input-group-addon">
+                      <i class="glyphicon glyphicon-user"></i>
+                    </span>
+                    <textarea name="comentario" class="form-control text-input" placeholder="Comentario..." rows="2" cols="150"></textarea>
+                  </div>
+                </form>
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -63,31 +117,31 @@
             </form>
             <table class="table tabla">
               <tr>
-                <td>Calamaro</td>
+                <td><a href="#" class="opcion-busqueda">Calamaro</a></td>
               </tr>
               <tr>
-                <td>Gustavo Cerati</td>
+                <td><a href="#" class="opcion-busqueda">Gustavo Cerati</a></td>
               </tr>
               <tr>
-                <td>Melendi</td>
+                <td><a href="#" class="opcion-busqueda">Melendi</a></td>
               </tr>
               <tr>
-                <td>Hector Lavoe</td>
+                <td><a href="#" class="opcion-busqueda">Hector Lavoe</a></td>
               </tr>
               <tr>
-                <td>Willie Colón</td>
+                <td><a href="#" class="opcion-busqueda">Willie Colón</a></td>
               </tr>
               <tr>
-                <td>Tupac</td>
+                <td><a href="#" class="opcion-busqueda">Tupac</a></td>
               </tr>
               <tr>
-                <td>Celia Cruz</td>
+                <td><a href="#" class="opcion-busqueda">Celia Cruz</a></td>
               </tr>
               <tr>
-                <td>Shakira</td>
+                <td><a href="#" class="opcion-busqueda">Shakira</a></td>
               </tr>
               <tr>
-                <td>Juanes</td>
+                <td><a href="#" class="opcion-busqueda">Juanes</a></td>
               </tr>
             </table>
           </div>
