--- a/BlogGastronomia/index.html
+++ b/BlogGastronomia/index.html
@@ -3,16 +3,24 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, user-scalable=no">
-    <title>Gastronomía Mundial</title>
     <link rel="stylesheet" href="css/foundation.min.css">
     <link rel="stylesheet" href="css/app.css">
     <link rel="stylesheet" href="foundation-icons/foundation-icons.css">
+    <title>Gastronomía Mundial</title>
   </head>
   <body>
+    <div class="row column main">
+      <div class="row header">
+        <div class="large-5 medium-7 small-12 columns">
+          <h1 class="text-left">Los Blogs del Hambre</h1>
+          <h4 class="text-right"><em>Porque barriga llena, corazón contento</em></h4>
+        </div>
+      </div>
+    </div>
 
     <script src="js/vendor/jquery.js"></script>
     <script src="js/vendor/what-input.js"></script>
-    <script src="js/vendor/foundation.js"></script>
-    <script src="js/app.js"></script>
+    <script src="js/vendor/foundation.min.js" charset="utf-8"></script>
+    <script src="js/app.js" charset="utf-8"></script>
   </body>
 </html>
