Terminado Blog de Turismo
Finalicé el blog de turismo. Quedo pendiente del blog de gastronomía

--- a/BlogTurismo/index.html
+++ b/BlogTurismo/index.html
@@ -7,32 +7,115 @@
     <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
     <link href="css/customColors.css" type="text/css" rel="stylesheet" media="screen,projection"/>
     <link href="css/index.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-    <title>Contenedores y Sistema de Rejilla</title>
+    <title>No Viajas, No Vives!</title>
   </head>
   <body>
     <div class="container">
-      <div class="row">
-        <div class="col s3 m2 l1 offset-m1 offset-l1">
+      <div class="row no-margin-r">
+        <div class="col s5 m2 l1 offset-m1 offset-l1">
           <img src="img/logo.jpg" alt="Logo" class="logo">
         </div>
-        <div class="col s8 m9 l10 offset-s1">
+        <div class="col s7 m9 l10">
           <div class="row menu-container">
             <div class="col s12">
               <ul class="right menu">
-                <a class="btn blue waves-effect hide-on-small-only" href="index.html"><i class="material-icons left">home</i>Inicio</a>
-                <a class="btn blue waves-effect hide-on-small-only" href="#"><i class="material-icons left">location_on</i>Estuve en</a>
-                <a class="btn blue waves-effect hide-on-small-only" href="#"><i class="material-icons left">star_border</i>Mejores viajes</a>
-                <a class="btn blue waves-effect hide-on-small-only" href="#"><i class="material-icons left">sms_failed</i>Recomendaciones</a>
-                <a class="btn blue waves-effect hide-on-med-and-up" href="#"><i class="material-icons">home</i></a>
-                <a class="btn blue waves-effect hide-on-med-and-up" href="#"><i class="material-icons">location_on</i></a>
-                <a class="btn blue waves-effect hide-on-med-and-up" href="#"><i class="material-icons">star_border</i></a>
-                <a class="btn blue waves-effect hide-on-med-and-up" href="#"><i class="material-icons">sms_failed</i></a>
+                <a class="btn white blue-text text-darken-1 waves-effect hide-on-small-only" href="index.html"><i class="material-icons left">home</i>Inicio</a>
+                <a class="btn white blue-text text-darken-1 waves-effect hide-on-small-only" href="#"><i class="material-icons left">location_on</i>Estuve en</a>
+                <a class="btn white blue-text text-darken-1 waves-effect hide-on-small-only" href="#"><i class="material-icons left">star_border</i>Mejores viajes</a>
+                <a class="btn white blue-text text-darken-1 waves-effect hide-on-small-only" href="#"><i class="material-icons left">sms_failed</i>Recomendaciones</a>
+                <a class="btn white blue-text text-darken-1 waves-effect hide-on-med-and-up" href="#"><i class="material-icons">home</i></a>
+                <a class="btn white blue-text text-darken-1 waves-effect hide-on-med-and-up" href="#"><i class="material-icons">location_on</i></a>
+                <a class="btn white blue-text text-darken-1 waves-effect hide-on-med-and-up" href="#"><i class="material-icons">star_border</i></a>
+                <a class="btn white blue-text text-darken-1 waves-effect hide-on-med-and-up" href="#"><i class="material-icons">sms_failed</i></a>
               </ul>
             </div>
           </div>
-          <div class="row">
+          <div class="row ">
             <div class="col s12 l11 offset-l1 slogan-container">
-              <h5 class="slogan-container white-text"><em>¡No viajas, No vives!</em></h5>
+              <h3 class="slogan-container white-text"><em>¡No viajas, No vives!</em></h3>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row no-margin-b gal-der">
+        <div class="col m1 hide-on-small-only">
+          <ul>
+            <li><a href="#"><img src="img/logoface.png" alt="Facebook" class="redes"></a></li>
+            <li><a href="#"><img src="img/logoyout.png" alt="Youtube" class="redes"></a></li>
+            <li><a href="#"><img src="img/logogoog.png" alt="Google" class="redes"></a></li>
+            <li><a href="#"><img src="img/logoinsta.png" alt="Instagram" class="redes"></a></li>
+            <li><a href="#"><img src="img/logotwit.png" alt="Twitter" class="redes"></a></li>
+          </ul>
+        </div>
+
+            <div class="col s12 m4 galeria">
+              <img src="img/galeria1.jpg" alt="Foto" class="img-galeria z-depth-3">
+              <img src="img/galeria2.jpg" alt="Foto" class="img-galeria z-depth-3">
+            </div>
+            <div class="col s12 m4 galeria">
+              <img src="img/galeria3.jpg" alt="Foto" class="img-galeria z-depth-3">
+            </div>
+            <div class="col s12 m3 galeria">
+              <img src="img/galeria4.jpg" alt="Foto" class="img-galeria z-depth-3">
+              <img src="img/galeria5.jpg" alt="Foto" class="img-galeria z-depth-3">
+              <img src="img/galeria6.jpg" alt="Foto" class="img-galeria z-depth-3">
+            </div>
+
+      </div>
+      <div class="row entrada-cont">
+        <div class="col s12 m9">
+          <div class="row padding-der">
+            <div class="col s12 white entrada">
+              <img src="img/entrada.jpg" alt="Foto" class="img-entrada left">
+              <h5 class="titulo-entrada">El espectáculo maravilloso de lirios gigantes en el río Paraguay</h5>
+              <div class="chip">
+                <i class="material-icons">date_range</i>
+                12 de Enero de 2018
+              </div>
+              <div class="chip">
+                <i class="material-icons">location_on</i>
+                Río Paraguay, localidad Limpio, Paraguay
+              </div>
+              <p>
+                Un manto verdoso de lirios sobre el agua de una laguna cercana al río Paraguay en la localidad de Limpio, a 30 kilómetros al norte de Asunción, se ha convertido estos días en un repentino reclamo turístico para miles de personas que acudieron a presenciar esta maravilla natural.<br><br>
+                Este brote de nenúfares circulares de hasta dos metros de diámetro, de la especie victoria amazónica o regia, solo aparece con este esplendor cada tres o cuatro años, según los vecinos de la zona.<br><br>
+                Es por ese motivo que los pescadores de la zona, que habitualmente se dedican a la pesca del surubí en las aguas del río, han dejado de lado las cañas y las redes para convertirse en barqueros que, por 10.000 guaraníes (1,4 euros) por pasajero, recorren las aguas plagadas de lirios en botes de madera.
+              </p>
+            </div>
+            <div class="col s12 blue white-text entrada">
+              <h5>Deja tu comentario</h5>
+              <form>
+                <div class="row">
+                  <div class="input-field col s6">
+                    <i class="material-icons tiny prefix">account_circle</i>
+                    <input id="nombre" type="text" class="validate">
+                    <label for="nombre">Nombre</label>
+                  </div>
+                  <div class="input-field col s6">
+                    <i class="material-icons tiny prefix">email</i>
+                    <input id="email" type="email" class="validate">
+                    <label for="email" data-succes="Correcto" data-error="Debes completar este campo">Correo Electrónico</label>
+                  </div>
+                  <div class="input-field col s6">
+                    <i class="material-icons tinny prefix">comment</i>
+                    <textarea id="comentario" class="materialize-textarea"></textarea>
+                    <label for="comentario">Comentario</label>
+                  </div>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+        <div class="col s8 offset-s2 m3 autor">
+          <div class="row padding-der">
+            <div class="col s12 white">
+              <img src="img/autor.jpg" alt="Autor" class="circle autor-img">
+              <h5 class="center-align">Perfil del Autor</h5>
+            </div>
+            <div class="col s12 white">
+              <p><b><em>Andrés Toro:</em></b> Estudiante de programación web. Amante de la creatividad y el aire libre.<br>
+                Motivado por su estilo de vida, creó este blog para compartir sus experiencias con todo aquel que busque incansablemente la libertad y la paz mental, que solo viajando puedes adquirir.
+              </p>
             </div>
           </div>
         </div>
