--- a/BlogGastronomia/index.html
+++ b/BlogGastronomia/index.html
@@ -5,17 +5,26 @@
     <meta name="viewport" content="width=device-width, user-scalable=no">
     <link rel="stylesheet" href="css/foundation.min.css">
     <link rel="stylesheet" href="css/app.css">
-    <link rel="stylesheet" href="foundation-icons/foundation-icons.css">
     <title>Gastronomía Mundial</title>
   </head>
   <body>
     <div class="row column main">
-      <div class="row header">
-        <div class="large-5 medium-7 small-12 columns">
-          <h1 class="text-left">Los Blogs del Hambre</h1>
-          <h4 class="text-right"><em>Porque barriga llena, corazón contento</em></h4>
+        <div class="row encabezado">
+          <div class="large-4 medium-4 small-12 columns titulo">
+            <h4>Los Blogs del Hambre</h4>
+            <h6 class="text-right"><em>Porque barriga llena, corazón contento</em></h6>
+          </div>
         </div>
-      </div>
+        <div class="row">
+          <div class="column large-4 medium-4 small-12 small-order-2">
+
+          </div>
+          <div class="column large-8 medium-8 small-12 small-order-1">
+            <div class="row">
+
+            </div>
+          </div>
+        </div>
     </div>
 
     <script src="js/vendor/jquery.js"></script>
