--- a/BlogGastronomia/index.html
+++ b/BlogGastronomia/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, user-scalable=no">
     <link rel="stylesheet" href="css/foundation.min.css">
+    <link rel="stylesheet" href="foundation-icons/foundation-icons.css" media="screen" charset="utf-8">
     <link rel="stylesheet" href="css/app.css">
     <title>Gastronomía Mundial</title>
   </head>
@@ -15,13 +16,66 @@
             <h6 class="text-right"><em>Porque barriga llena, corazón contento</em></h6>
           </div>
         </div>
-        <div class="row">
-          <div class="column large-4 medium-4 small-12 small-order-2">
-
+        <div class="row contenido">
+          <div class="column large-4 medium-4 hide-for-small-only colizq">
+            <div class="row column seccion">
+              <form>
+                <div class="input-group">
+                  <input type="text" class="input-group-field">
+                  <div class="input-group-button">
+                    <a href="#" class="button"><i class="fi-magnifying-glass"></i></a>
+                  </div>
+                </div>
+              </form>
+            </div>
+            <div class="row column seccion">
+              <ul class="vertical menu menu-ppal text-center">
+                <li><a href="#">Desayunos</a></li>
+                <li><a href="#">Almuerzos</a></li>
+                <li><a href="#">Postres</a></li>
+              </ul>
+            </div>
+            <div class="row column seccion">
+              <h5>Favoritos:</h5>
+              <div class="row fila-img">
+                <div class="column large-4 medium-12">
+                  <a href="#"><img src="img/galeria1.jpg" class="imagenes"></a>
+                </div>
+                <div class="column large-4 medium-12">
+                  <a href="#"><img src="img/galeria2.jpg" class="imagenes"></a>
+                </div>
+                <div class="column large-4 medium-12">
+                  <a href="#"><img src="img/galeria3.jpg" class="imagenes"></a>
+                </div>
+              </div>
+              <div class="row fila-img">
+                <div class="column large-4 medium-12">
+                  <a href="#"><img src="img/galeria4.jpg" class="imagenes"></a>
+                </div>
+                <div class="column large-4 medium-12">
+                  <a href="#"><img src="img/galeria5.jpg" class="imagenes"></a>
+                </div>
+                <div class="column large-4 medium-12">
+                  <a href="#"><img src="img/galeria6.jpg" class="imagenes"></a>
+                </div>
+              </div>
+            </div>
+            <div class="row column seccion">
+              <h5>Historial:</h5>
+              <ul class="vertical menu historial">
+                <li><a href="#">Postre de limón</a></li>
+                <li><a href="#">Jugo de Aguacate</a></li>
+                <li><a href="#">Ensalada Caesar</a></li>
+                <li><a href="#">Sancocho Tradicional</a></li>
+                <li><a href="#">Empanadas Chilenas</a></li>
+              </ul>
+            </div>
           </div>
-          <div class="column large-8 medium-8 small-12 small-order-1">
-            <div class="row">
+          <div class="column large-8 medium-8 small-12 colder">
+            <div class="row column entrada">
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborumLorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
+              </div>
             </div>
           </div>
         </div>
