--- a/BlogGastronomia/index.html
+++ b/BlogGastronomia/index.html
@@ -10,75 +10,161 @@
   </head>
   <body>
     <div class="row column main">
-        <div class="row encabezado">
-          <div class="large-4 medium-4 small-12 columns titulo">
-            <h4>Los Blogs del Hambre</h4>
-            <h6 class="text-right"><em>Porque barriga llena, corazón contento</em></h6>
+      <div class="row encabezado">
+        <div class="large-4 medium-4 small-12 columns titulo">
+          <h2>Los Blogs del Hambre</h2>
+          <h5 class="text-right"><em>Porque barriga llena, corazón contento</em></h5>
+        </div>
+      </div>
+      <div class="row contenido">
+        <div class="column large-4 medium-4 hide-for-small-only colizq">
+          <div class="row column seccion">
+            <form>
+              <div class="input-group">
+                <input type="text" class="input-group-field">
+                <div class="input-group-button">
+                  <a href="#" class="button"><i class="fi-magnifying-glass"></i></a>
+                </div>
+              </div>
+            </form>
+          </div>
+          <div class="row column seccion">
+            <ul class="vertical menu menu-ppal text-center">
+              <li><a href="#">Desayunos</a></li>
+              <li><a href="#">Almuerzos</a></li>
+              <li><a href="#">Postres</a></li>
+            </ul>
+          </div>
+          <div class="row column seccion">
+            <h4 class="titulo-seccion">Favoritos:</h4>
+            <div class="row fila-img">
+              <div class="column large-4 medium-12">
+                <a href="#"><img src="img/galeria1.jpg" class="imagenes"></a>
+              </div>
+              <div class="column large-4 medium-12">
+                <a href="#"><img src="img/galeria2.jpg" class="imagenes"></a>
+              </div>
+              <div class="column large-4 medium-12">
+                <a href="#"><img src="img/galeria3.jpg" class="imagenes"></a>
+              </div>
+            </div>
+            <div class="row fila-img">
+              <div class="column large-4 medium-12">
+                <a href="#"><img src="img/galeria4.jpg" class="imagenes"></a>
+              </div>
+              <div class="column large-4 medium-12">
+                <a href="#"><img src="img/galeria5.jpg" class="imagenes"></a>
+              </div>
+              <div class="column large-4 medium-12">
+                <a href="#"><img src="img/galeria6.jpg" class="imagenes"></a>
+              </div>
+            </div>
+          </div>
+          <div class="row column seccion">
+            <h4 class="titulo-seccion">Historial:</h4>
+            <ul class="vertical menu historial">
+              <li><a href="#">Postre de limón</a></li>
+              <li><a href="#">Jugo de Aguacate</a></li>
+              <li><a href="#">Ensalada Caesar</a></li>
+              <li><a href="#">Sancocho Tradicional</a></li>
+              <li><a href="#">Empanadas Chilenas</a></li>
+            </ul>
           </div>
         </div>
-        <div class="row contenido">
-          <div class="column large-4 medium-4 hide-for-small-only colizq">
-            <div class="row column seccion">
-              <form>
-                <div class="input-group">
-                  <input type="text" class="input-group-field">
-                  <div class="input-group-button">
-                    <a href="#" class="button"><i class="fi-magnifying-glass"></i></a>
-                  </div>
+        <div class="column large-8 medium-8 small-12 colder">
+          <div class="row column entrada">
+            <h3 class="titulo-entrada">Lasaña</h3>
+            <h6>23 Enero 2018</h6>
+            <hr>
+            <img src="img/entrada1.jpg" alt="Pizza" class="imagenes">
+            <hr>
+            <p>
+              La historia de la pizza comienza probablemente con la historia del empleo del pan por parte de la humanidad. Se tiene constancia de que en la antigua Grecia (cuna de los panes planos) donde ya se servía el <em>plakuntos</em> decorado con hierbas, especias, ajo y cebolla, en la época de Darío I el Grande (521-500 a. C.) los soldados persas tomaban pan plano con queso fundido y dátiles por su parte superior,​ y Virgilio en la <em>Eneida</em> menciona un plato similar.
+            </p>
+            <p>
+              Muchos autores afirman que la pizza, tal y como se conoce en la actualidad, procede de la ciudad de Nápoles (Italia) y aparece como plato popular entre los napolitanos, en algún instante no definido del siglo XVII.​ Es pues que la pizza nace de un alimento elaborado por los habitantes humildes de la ciudad de Nápoles y la composición no fuera tan variada como la actual.
+            </p>
+            <form>
+              <div class="row column">
+                <textarea placeholder="Escribe tu comentario" rows="2"></textarea>
+              </div>
+              <div class="row column text-right">
+                <a class="button" href="#">Publicar <i class="fi-pencil"></i></a>
+              </div>
+            </form>
+            <div class="row column">
+              <div class="row comentario">
+                <div class="large-1 medium-1 small-1 columns">
+                  <img src="img/male.svg">
                 </div>
-              </form>
-            </div>
-            <div class="row column seccion">
-              <ul class="vertical menu menu-ppal text-center">
-                <li><a href="#">Desayunos</a></li>
-                <li><a href="#">Almuerzos</a></li>
-                <li><a href="#">Postres</a></li>
-              </ul>
-            </div>
-            <div class="row column seccion">
-              <h5>Favoritos:</h5>
-              <div class="row fila-img">
-                <div class="column large-4 medium-12">
-                  <a href="#"><img src="img/galeria1.jpg" class="imagenes"></a>
-                </div>
-                <div class="column large-4 medium-12">
-                  <a href="#"><img src="img/galeria2.jpg" class="imagenes"></a>
-                </div>
-                <div class="column large-4 medium-12">
-                  <a href="#"><img src="img/galeria3.jpg" class="imagenes"></a>
+                <div class="large-11 medium-11 small-11 columns">
+                  <p class="text-justify"><strong>Antoine Fr:</strong>La Pizza es la mejor comida del mundooo!</p>
                 </div>
               </div>
-              <div class="row fila-img">
-                <div class="column large-4 medium-12">
-                  <a href="#"><img src="img/galeria4.jpg" class="imagenes"></a>
+              <div class="row comentario">
+                <div class="large-1 medium-1 small-1 columns">
+                  <img src="img/female.svg">
                 </div>
-                <div class="column large-4 medium-12">
-                  <a href="#"><img src="img/galeria5.jpg" class="imagenes"></a>
-                </div>
-                <div class="column large-4 medium-12">
-                  <a href="#"><img src="img/galeria6.jpg" class="imagenes"></a>
+                <div class="large-11 medium-11 small-11 columns">
+                  <p class="text-justify"><strong>Laura Co:</strong>Quiero aprender a hacer el pan de Pizza. Alguien me puede colaborar?</p>
                 </div>
               </div>
-            </div>
-            <div class="row column seccion">
-              <h5>Historial:</h5>
-              <ul class="vertical menu historial">
-                <li><a href="#">Postre de limón</a></li>
-                <li><a href="#">Jugo de Aguacate</a></li>
-                <li><a href="#">Ensalada Caesar</a></li>
-                <li><a href="#">Sancocho Tradicional</a></li>
-                <li><a href="#">Empanadas Chilenas</a></li>
-              </ul>
+              <div class="row comentario">
+                <div class="large-1 medium-1 small-1 columns">
+                  <img src="img/female.svg">
+                </div>
+                <div class="large-11 medium-11 small-11 columns">
+                  <p class="text-justify"><strong>Christine US:</strong>No tengo ni idea de cómo hacerlo pero también me gustaría aprender.</p>
+                </div>
+              </div>
             </div>
           </div>
-          <div class="column large-8 medium-8 small-12 colder">
-            <div class="row column entrada">
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborumLorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
+          <div class="row column entrada">
+            <h3 class="titulo-entrada">Macarronada Maracaibera</h3>
+            <h6>16 Diciembre 2017</h6>
+            <hr>
+            <img src="img/entrada2.jpg" alt="Macarronada" class="imagenes">
+            <hr>
+            <p>
+              La macarronada es uno de los platos emblemáticos de Maracaibo que engalana las mesas zulianas en sus días de fiesta: día de la Chiquinquirá, Año Nuevo, ocasiones especiales... Cada familia tiene su fórmula, que comparte gustosamente con amigos y vecinos.
+            </p>
+            <form>
+              <div class="row column">
+                <textarea placeholder="Escribe tu comentario" rows="2"></textarea>
+              </div>
+              <div class="row column text-right">
+                <a class="button" href="#">Publicar <i class="fi-pencil"></i></a>
+              </div>
+            </form>
+            <div class="row column">
+              <div class="row comentario">
+                <div class="large-1 medium-1 small-1 columns">
+                  <img src="img/male.svg">
+                </div>
+                <div class="large-11 medium-11 small-11 columns">
+                  <p class="text-justify"><strong>Carlos Pe:</strong>Wow! Se ve genial. Lo prepararé hoy mismo y les cuento qué tal me quedó!</p>
+                </div>
+              </div>
+              <div class="row comentario">
+                <div class="large-1 medium-1 small-1 columns">
+                  <img src="img/female.svg">
+                </div>
+                <div class="large-11 medium-11 small-11 columns">
+                  <p class="text-justify"><strong>Carolina Ve:</strong>Este plato me trae muchooos recuerdos de mi niñez. Es espectacular!</p>
+                </div>
+              </div>
+              <div class="row comentario">
+                <div class="large-1 medium-1 small-1 columns">
+                  <img src="img/male.svg">
+                </div>
+                <div class="large-11 medium-11 small-11 columns">
+                  <p class="text-justify"><strong>Fernando Es:</strong>Me animo a hacerlo también. Espero que se termine viendo como la de la foto jejejeje</p>
+                </div>
               </div>
             </div>
           </div>
         </div>
+      </div>
     </div>
 
     <script src="js/vendor/jquery.js"></script>
